ids/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ids
  labels:
    app: ids
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: ids
