ids/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ids
  annotations:
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/compute-full-forwarded-for: "true"
    external-dns.alpha.kubernetes.io/hostname: ids.jshipster.io
spec:
  ingressClassName: nginx
  rules:
  - host: ids.jshipster.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ids
            port:
              number: 8080
